--- a/TopButton/TButton.html
+++ b/TopButton/TButton.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scroll to Top Button</title>
-    <link rel="stylesheet" href="TButton.css">
+    <link rel="stylesheet" href="TButton.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
-    <button onclick="topFunction()" id="scrollToTopBtn" title="Go to top">Top</button>
 
-    <script src="TButton.js"></script>
+<!-- 버튼 추가 -->
+<a href="#" class="top-link" aria-label="Scroll to top">
+    <!-- 버튼 아이콘 등 추가 -->
+</a>
+
+<!-- 다른 HTML 내용 추가 -->
+
 </body>
 </html>
